Majors : Sub Pages Fixes and Text Visibility. (#10)

--- a/css/entry.css
+++ b/css/entry.css
@@ -23,6 +23,19 @@
     top: 50%;
     bottom: 50%;
     translate: -50% -50%;
+} 
+
+#entry-loader::before,
+#entry-loader::after {
+    content: "Hello Bro ";
+    color: cyan;
+    font-size: 4.4rem;
+    background-color: rgb(10, 10, 10); 
+    position: absolute;
+    margin: 0px;
+    top: 50%;
+    bottom: 50%;
+    translate: -50% -50%;
 } */
 
 
@@ -372,5 +385,20 @@
 
     100% {
         background: #353535;
+    }
+} */
+
+/*
+@keyframes fade11 {
+    0% {
+        background: #262626;
+    }
+
+    50% {
+        background: #000000;
+    }
+
+    100% {
+        background: #717171;
     }
 } */
