--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -1,15 +1,3 @@
-/* @font-face {
-    font-family: 'Arial Nova';
-    src: url('ArialNova-Bold.eot');
-    src: local('Arial Nova Bold'), local('ArialNova-Bold'),
-        url('ArialNova-Bold.eot?#iefix') format('embedded-opentype'),
-        url('ArialNova-Bold.woff2') format('woff2'),
-        url('ArialNova-Bold.woff') format('woff'),
-        url('ArialNova-Bold.ttf') format('truetype');
-    font-weight: bold; 
-    font-style: normal;
-} */
-
 html, body{
     font-family: "Arial Nova Light",sans-serif;
     font-display: swap;
